prevent zoom in on small device

--- a/src/js/components/styles/form.scss
+++ b/src/js/components/styles/form.scss
@@ -18,6 +18,7 @@ $form-focus-color: #444 !default;
   form {
     border-collapse: collapse;
     display: table;
+    font-size: 16px;
     margin: 0 auto;
     width: 96%;
     max-width: 640px;
@@ -45,10 +46,10 @@ $form-focus-color: #444 !default;
     color: #444;
     display: table-cell;
     float: left;
-    font-size: 13px;
-    height: 34px;
+    font-size: 18px;
+    height: 46px;
     line-height: 1.5;
-    padding: 4px 6px;
+    padding: 10px 16px;
     width: 100%;
     vertical-align: top;
 
@@ -58,13 +59,42 @@ $form-focus-color: #444 !default;
       background: $form-focus-background;
       color: $form-focus-color;
     }
+
+    @media screen and (min-width: $breakpoint-medium) {
+      font-size: 13px;
+      height: 34px;
+      line-height: 1.5;
+      margin: 0;
+      padding: 4px 6px;
+    }
   }
 
   #mi-submit {
     display: table-cell;
     margin: 0;
     vertical-align: middle;
-    width: 34px;
+    width: 48px;
+
+    >button {
+      font-size: 18px;
+      height: 46px;
+      line-height: 46px;
+      padding: 0 16px;
+    }
+
+    @media screen and (min-width: $breakpoint-medium) {
+      width: 34px;
+
+      >button {
+        font-size: 14px;
+        height: 34px;
+        line-height: 1.5;
+        padding: 0 12px;
+      }
+    }
+  }
+
+  #mi-submit {
 
     >button {
       border-top-left-radius: 0;
@@ -87,24 +117,6 @@ $form-focus-color: #444 !default;
       display: block;
       padding-right: 0;
       width: 100%;
-    }
-
-    #mi-input {
-      font-size: 18px;
-      height: 46px;
-      margin: 0;
-      padding: 10px 16px;
-    }
-
-    #mi-submit {
-      width: 48px;
-
-      >button {
-        font-size: 18px;
-        height: 46px;
-        line-height: 46px;
-        padding: 0 16px;
-      }
     }
   }
 }
